Refactor parameter handling and response structures in controllers
- Replaced `payerId` with `email` for better clarity in `getExpenses` method across controllers and services.
- Updated `createPayment` method to return a simplified response containing payment `id` and `amount`.
- Adjusted related filtering logic in `ExpenseServiceImpl` to use email.
- Corrected README examples and endpoints to reflect changes in parameter names and server port adjustments.